syntax = "proto3";
package settle;
option go_package = "/proto";
import "google/protobuf/timestamp.proto";


enum SettleAction {
  Result = 0;   // settle with result
  Cancel = 1;   // Cancel
  RCancel = 2;  // RollbackCancel
  RSettle = 3;  // RollbackSettle
}

enum OutcomeResultCode {
  OutcomeResult_Unknown = 0;
  OutcomeResult_Open = 1;
  OutcomeResult_Won = 2;
  OutcomeResult_HalfWon = 3;
  OutcomeResult_Lost = 4;
  OutcomeResult_HalfLost = 5;
  OutcomeResult_Void = 6;
  OutcomeResult_Error = 7;
  OutcomeResult_WonDeadHeat = 8;
  OutcomeResult_Cancel = 9;
  OutcomeResult_Subpended  = 10;
}

message OutcomeResult {
  uint64 Outcome = 1;                    // OutcomeId ID
  OutcomeResultCode Result = 2;  // settle result. check outcome result
  /* if result = 8, check this field and "Won Dead Heat" settle logic */
  double Shared = 3;
  /* provide a array like [1,3], which producer need to settle */
  repeated uint32 Scope = 4;
}

message Settle {
  // the settle result from which producer
  uint32 Producer = 1;
  /* provide a array like [1,3], which producer need to settle */
  /* if SettleAction = Result, check the scope in OutcomeResult */
  repeated uint32 Scope = 2;
  // market ID,
  uint64 Market = 3;
  // cancel reason.
  uint32 Reason = 4;
  /*
   * when SettleAction = Result
   * need to check the outcomes to settle thebet_selection
   */
  repeated OutcomeResult Outcomes = 5;
  /* Cancel  and RCancel  sometimes it will be provide, check the bet time */
  google.protobuf.Timestamp From = 6;
  /* Cancel  and RCancel  sometimes it will be provide, check the bet time */
  google.protobuf.Timestamp To = 7;
}


//mq 消息结构
message SettleShell {
  // 结算消息的类型 结算 取消结算
  // this message for
  SettleAction Action = 1;
  // which markets need to process
  repeated Settle Settle = 2;
  // message created at
  google.protobuf.Timestamp Timestamp = 3;
}

// check a seletion status
message OutcomeCheckRequest {
  uint32 Producer = 1;
  uint64 Market = 2;
  uint64 Outcome = 3;
  google.protobuf.Timestamp BetTime = 4;
}